first prototype for expanded inventory screens